Actualización pre-entrega 1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a><i><img src="https://cdn-icons-png.flaticon.com/512/17/17654.png" class="menu"></i></a>
       </div>
       <ul>
-        <li><a href="#about-me">Sobre Mí</a></li>
+        <li><a href="#about-me">Sobre mí</a></li>
         <li><a href="#formacion">Formación</a></li>
         <li><a href="#idiomas">Idiomas</a></li>
         <li><a href="#contact">Contacto</a></li>
@@ -30,7 +30,7 @@
     <section>
       <!--Separacion divs-->
       <div class="image-perfil">
-        <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="image profile">
+        <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="profile image" class="image-perfil">
       </div>
       <!--Separacion divs-->
       <div class="datos-principales align-items-lg-stretch">
@@ -142,22 +142,22 @@
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           target="_blank"
           rel="noopener noreferrer"
-          ><i class="fa-brands fa-linkedin"></i
+          ><img class="logo" src="F:\Documentos\Uli\Proyecto FInal\EntregaAP/assets/linkedin logo.png"><i class="fa-brands fa-linkedin"></i
         ></a>
         <a
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           target="_blank"
           rel="noopener noreferrer"
-          ><i class="fa-brands fa-youtube"></i
+          ><img class="logo" src="F:\Documentos\Uli\Proyecto FInal\EntregaAP/assets/youtube logo.png"><i class="fa-brands fa-youtube"></i
         ></a>
         <a
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           target="_blank"
           rel="noopener noreferrer"
-          ><i class="fa-brands fa-instagram"></i
+          ><img class="logo" src="F:\Documentos\Uli\Proyecto FInal\EntregaAP/assets/instagram logo.png"><i class="fa-brands fa-instagram"></i
         ></a>
     </div>
   </footer>
-  <script src="/ProyectoIntegrador_DosSantosUlises/src/function.js"></script>
+  <script src="/function.js"></script>
 </body>
 </html>
