Archivo final para la entrega

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   </head>
 <body>
   <header>
-    <nav class="sth-menu, navbar" id="menu-panel">
-      <div class="picture">
-        <a><i><img src="https://cdn-icons-png.flaticon.com/512/17/17654.png" class="menu"></i></a>
+    <div id="sidebar">
+      <div class="toggle-btn">
+        <span id="menu-icono">&#9776</span>
       </div>
       <ul>
-        <li><a href="#about-me">Sobre mí</a></li>
-        <li><a href="#formacion">Formación</a></li>
-        <li><a href="#idiomas">Idiomas</a></li>
-        <li><a href="#contact">Contacto</a></li>
+        <li class="sidebar-element" id="primero"><a href="#about-me">Sobre mí</a></li>
+        <li class="sidebar-element"><a href="#formacion">Formación</a></li>
+        <li class="sidebar-element"><a href="#idiomas">Idiomas</a></li>
+        <li class="sidebar-element"><a href="#contact">Contacto</a></li>
       </ul>
-    </nav>
+    </div>
     <section>
       <!--Separacion divs-->
       <div class="image-perfil">
@@ -42,13 +42,6 @@
   </header>
 
   <main class="sth-container" id="page-content">
-    <!--Sidebar-->
-    <section class="sth-appbar">
-      <div class="menu" id="menu-button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
     </section>
     <!--Info About Me / Sobre Mí-->
     <section id="about-me" class="sobre-mi parte-oscura">
@@ -142,22 +135,22 @@
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           target="_blank"
           rel="noopener noreferrer"
-          ><img class="logo" src="F:\Documentos\Uli\Proyecto FInal\EntregaAP/assets/linkedin logo.png"><i class="fa-brands fa-linkedin"></i
+          ><img class="logo" src="assets/linkedin logo.png"><i class="fa-brands fa-linkedin"></i
         ></a>
         <a
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           target="_blank"
           rel="noopener noreferrer"
-          ><img class="logo" src="F:\Documentos\Uli\Proyecto FInal\EntregaAP/assets/youtube logo.png"><i class="fa-brands fa-youtube"></i
+          ><img class="logo" src="assets/youtube logo.png"><i class="fa-brands fa-youtube"></i
         ></a>
         <a
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           target="_blank"
           rel="noopener noreferrer"
-          ><img class="logo" src="F:\Documentos\Uli\Proyecto FInal\EntregaAP/assets/instagram logo.png"><i class="fa-brands fa-instagram"></i
+          ><img class="logo" src="assets/instagram logo.png"><i class="fa-brands fa-instagram"></i
         ></a>
     </div>
   </footer>
-  <script src="/function.js"></script>
+  <script src="function.js" charset="utf-8"></script>
 </body>
 </html>
