Archivo final para la entrega

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
           rel="noopener noreferrer"
           ><img class="logo" src="assets/instagram logo.png"><i class="fa-brands fa-instagram"></i
         ></a>
+        <!--Estos links están hechos pura y exclusivamente por el apartado visual de la página y redirigen 
+          todos a ese link con la finalidad de mostrar que están bien programados y buscan sacar una sonrisa :)-->
     </div>
   </footer>
   <script src="function.js" charset="utf-8"></script>
