Archivo final para la entrega

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!--Separacion divs-->
       <div class="datos-principales align-items-lg-stretch">
         <h1>MITCHELL CARLOS (35 años)</h1>
-        <h2>Arquitecto</h2>
+        <h2>Desarrollador Web</h2>
       </div>
       <!--Separacion divs-->
     </section>
@@ -48,10 +48,12 @@
       <div class="contenedor">
         <h3 class="seccion-titulo">Sobre mí</h3>
         <p class="seccion-texto">
-          Como arquitecto, me especializo en el diseño y construcción de la fachada de edificios con los acabados más artísticos. 
-          Esto incluye la creación de acabados decorativos para la arquitectura o cualquier complejo hogareño también.
-          Mi objetivo es ver a mi trabajo convertido en una característica habitual de los museos de arquitectura de 
-          todo Argentina al proporcionar un complemento visual para el rico patrimonio cultural de este país.
+          Como desarrollador web, mi objetivo es ser el mejor en mi campo: hago diseño web receptivo de la manera más humana posible.
+          No siempre es fácil o rápido (he tenido varias fallas y, a veces, parece que no puedes llegar a ninguna parte sin un tiempo de inactividad). 
+          ¡Pero eso no me hace perezoso! Verá, hay momentos en que todo encaja en su sitio, tal vez incluso dentro de una hora de hacerlo realidad :) 
+          Simplemente seguiré trabajando duro durante meses y años hasta que las cosas vuelvan a encajar... Y luego planee lo que vendrá ahora porque
+          "ya está aquí". Si esos planes no son lo suficientemente sólidos por sí solos, ¡seguro que podrían funcionar bien juntos! 
+          ¿No habrían sido necesarios si no lo hubiésemos hecho?
         </p>
       </div>
     </section>
@@ -63,13 +65,16 @@
           2008 - Bachiller en Comunicación - St. Hilda's College
         </li>
         <li>
-          2015 - Arquitectura - Universidad de Buenos Aires
+          2015 - Desarrollo Web (Terciario) - Universidad de Buenos Aires
         </li>
         <li>
           2016 - Diseñador Gráfico - Escuela Da Vinci
         </li>
         <li>
           2019 - Idiomas: Italiano - Coursera
+        </li>
+        <li>
+          2020 - Curso Avanzado en Idiomas: Inglés - John Deacon's English Academy
         </li>
       </ul>
     </section>
@@ -106,9 +111,9 @@
             <!--Separacion div-->
             <div class="col-12 col-md-4 descripcion">
               "Toda mi experiencia en este campo me lleva a pensar que,
-              con el esfuerzo, trabajo y dedicación suficientes, el día de mañana
-              puedo llegar a ser recordado como una persona importante
-              en la cultura de este país".
+              con el esfuerzo, trabajo y dedicación suficientes, puedo aportar
+              de manera significativa a este emprendimiento y hacerlo crecer
+              hasta donde la imaginación llegue".
             </div>
             <!--Separacion div-->
             <div class="col-12 col-md-4">
